version/0.40/_sources/api/solver/_autosummary/settings/threshold.rst.txt
:orphan:

.. _threshold:

threshold
=========

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.threshold
    :show-inheritance:

.. rubric:: Included in:

======================================================================================   ============================================================================================

Parent                                                                                                                                                                        Summary

======================================================================================   ============================================================================================
:ref:`orthogonality_enhancing_cell_centroids <orthogonality_enhancing_cell_centroids>`       Relocate select cell centroids, to improve orthogonality metrics and solution stability.

======================================================================================   ============================================================================================

